fix: fixed outlined button appearance on mobile version in hero section

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -546,6 +546,10 @@ body {
   .hero__button {
     display: block;
     min-width: 22.86rem;
+    margin-bottom: 1.85rem; }
+  .hero__button-outline {
+    display: block;
+    min-width: 22.86rem;
     margin-bottom: 1.85rem; } }
 
 @media screen and (max-height: 520px) {
