--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -34,6 +34,10 @@
       display: block
       min-width: 22.86rem
       margin-bottom: 1.85rem
+    &__button-outline
+      display: block
+      min-width: 22.86rem
+      margin-bottom: 1.85rem
 @media screen and ( max-height: 520px )
   .hero
     &__scroll-down
